--- a/style.css
+++ b/style.css
@@ -13,10 +13,9 @@ body {
 }
 
 button {
-  display: block;
-  margin: 10px 0;
-  padding: 10px;
   width: 100%;
+  padding: 10px;
+  margin-top: 10px;
   background: #333;
   color: white;
   border: none;
